# hass-event-collector

./: .gitlab-ci.yml  Cargo.toml  Dockerfile.x86-64
src/: filter.rs  main.rs  metadata.rs  value.rs
