[package]
name = "hass-event-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
arcstr = { version = "1.1.5", features = ["serde"] }
async-channel = "2.1.1"
bytes = "1.5.0"
chrono = "0.4.31"
clap = { version = "4.4.13", features = ["derive", "env"] }
compact_str = { version = "0.7.1", features = ["serde"] }
futures = { version = "0.3.30", default-features = false }
hass-rs = { version = "0.2.0", default-features = false, features = ["tokio-runtime"] }
influxdb = "0.5.2"
influxdb-config = "0.5.6"
regex = "1.10.2"
rumqttc = "0.23.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_regex = "1.1.0"
tokio = { version = "1.35.1", features = ["rt", "macros", "signal", "sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[patch.crates-io]
hass-rs = { git = "https://github.com/mcronce/hass-rs", branch = "opt" }

